# MipsSimulator

./: input.toml  input_sample1.toml  input_sample2.toml  input_sample3.toml  input_sample4.toml  output_sample1.txt  output_sample2.txt  output_sample3.txt  output_sample4.txt  pyproject.toml  readme.md  test_output1.txt
simulator/: input_parser.py  main.py
simulator/lib/: vcpu_simulator.py
simulator/lib/generics/: addressing_modes.py  exceptions.py  mipsprogram.py  opcode.py  operand.py  pipelineoperations.py  pipelinestage.py  register.py  vcpu.py
simulator/mips_virtualization/: assembler.py
simulator/mips_virtualization/impl/: instructions.py  mips_stage.py  mips_stages.py
tests/: test_assembler.py  test_input_parser.py  test_pipelinestage.py
