[tool.poetry]
name = "simulatorproject"
version = "0.1.0"
description = "Simulate 8 stage MIPS cpu pipeline"
authors = ["Erich McMillan <erichmcmill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
ptvsd = "^4.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
